[gd_scene load_steps=31 format=3 uid="uid://coonq3d60do4c"]

[ext_resource type="Texture2D" uid="uid://dw4rakyt6dmta" path="res://aisles/bosses/carrot/art/carrot_boss.png" id="1_8u6sg"]
[ext_resource type="Script" path="res://aisles/bosses/carrot/carrot_boss.gd" id="1_nmnn0"]
[ext_resource type="Shader" path="res://miscellaneous/enemy_flash.gdshader" id="2_kcadp"]
[ext_resource type="PackedScene" uid="uid://dfsj6cpisvgbu" path="res://components/scenes/boss_health_component.tscn" id="2_ti5tf"]
[ext_resource type="PackedScene" uid="uid://bvr04i1rtrr5n" path="res://components/scenes/enemy_hurtbox.tscn" id="3_bidri"]
[ext_resource type="PackedScene" uid="uid://d165eow85pjqq" path="res://components/scenes/enemy_hitbox.tscn" id="4_kh2t8"]
[ext_resource type="Script" path="res://aisles/bosses/carrot/carrot_state_machine.gd" id="7_4udj2"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Nodes/BuHSpawnPoint.gd" id="8_flvuu"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Nodes/BuHPattern.gd" id="9_nhw65"]
[ext_resource type="Script" path="res://addons/BulletUpHell/SpawnPatterns/PatternCircle.gd" id="10_4bm4s"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Nodes/BuHBulletProperties.gd" id="11_ksj8h"]
[ext_resource type="Script" path="res://addons/BulletUpHell/SpawnPatterns/PatternRandomizer.gd" id="12_4wkpc"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Bullet/animStates.gd" id="12_gvqvi"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Bullet/BulletProps.gd" id="13_nucuv"]
[ext_resource type="Texture2D" uid="uid://c13hfk1c6gfu6" path="res://aisles/bosses/carrot/art/carrot_warning_arrow.png" id="15_vc48u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i5yl4"]
shader = ExtResource("2_kcadp")
shader_parameter/flash_amount = 0.0

[sub_resource type="Animation" id="Animation_awjav"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_e6h6s"]
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_5dmtr"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hay1u"]
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_e7d8i"]
length = 0.45
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../StateMachine")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.433333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spinning_start"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6p5mx"]
_data = {
"active": SubResource("Animation_awjav"),
"bite": SubResource("Animation_e6h6s"),
"inactive": SubResource("Animation_5dmtr"),
"spin": SubResource("Animation_hay1u"),
"startspin": SubResource("Animation_e7d8i")
}

[sub_resource type="Curve2D" id="Curve2D_d4shc"]

[sub_resource type="Curve" id="Curve_ji5dq"]

[sub_resource type="Resource" id="Resource_as0pp"]
script = ExtResource("12_gvqvi")
ID = "carrot"
texture = "carrot"
collision = "carrot"
SFX = ""
tex_scale = 1.0
tex_skew = 0.0

[sub_resource type="Curve" id="Curve_vkyd1"]

[sub_resource type="PackedDataContainer" id="PackedDataContainer_7x8yc"]
script = ExtResource("13_nucuv")
damage = 1.0
speed = 150.0
scale = 1.0
angle = 0.0
groups = PackedStringArray()
custom_data = {
"test": Vector3(0, 2, 3)
}
death_after_time = 8.0
death_outside_box = Rect2(0, 0, 0, 0)
death_from_collision = true
death_speed_under = 0.0
death_culling_overwrite = 3
spec_modulate_loop = 0.0
no_rotation = false
anim_idle = SubResource("Resource_as0pp")
anim_spawn = SubResource("Resource_as0pp")
anim_shoot = SubResource("Resource_as0pp")
anim_waiting = SubResource("Resource_as0pp")
anim_delete = SubResource("Resource_as0pp")
anim_more = Array[ExtResource("12_gvqvi")]([])
spec_trail_length = 0.0
spec_trail_width = 0.0
spec_trail_modulate = Color(1, 1, 1, 1)
spec_trail_fade_out = false
spec_trail_thin_out = false
spec_trail_smooth = 0.03
a_direction_equation = ""
a_angular_equation = ""
a_curve_movement = 0
a_speed_multi_iterations = 0
a_speed_multi_scale = 0.0
a_speed_multiplier = SubResource("Curve_ji5dq")
depth_active = Vector2(0, 0)
depth_spawn = 0.0
depth_speed = 100.0
depth_min_max = Vector2(-300, 100)
depth_bounce = false
depth_fading = false
depth_scaling = true
spec_bounces = 0
spec_no_collision = false
spec_rotating_speed = 0.0
spec_only_spin_sprite = true
spec_weight = 1.0
scale_multi_iterations = 0
scale_multiplier = SubResource("Curve_vkyd1")
scale_multi_scale = 1.0
trigger_container = ""
trigger_wait_for_shot = true
homing_type = 0
homing_target = NodePath("")
homing_steer = 0.0
homing_time_start = 0.0
homing_duration = 999.0
homing_detection_dist = 0.0
homing_start_signal = ""
homing_range = Vector2(9999, 20)
homing_imprecision = Vector2(0, 0)
r_randomisation_chances = 1.0
r_speed_choice = PackedFloat32Array()
r_speed_variation = Vector3(0, 0, 0)
r_scale_choice = PackedFloat32Array()
r_scale_variation = Vector3(0, 0, 0)
r_angle_choice = PackedFloat32Array()
r_angle_variation = Vector3(0, 0, 0)
r_group_choice = []
r_bounce_choice = PackedInt32Array()
r_bounce_variation = Vector3(0, 0, 0)
r_no_coll_chances = 0.0
r_modulate_variation = Vector3(0, 0, 0)
r_trail_length_variation = Vector3(0, 0, 0)
r_trail_color_variation = Vector3(0, 0, 0)
r_rotating_variation = Vector3(0, 0, 0)
r_death_after_choice = PackedFloat32Array()
r_death_after_variation = Vector3(0, 0, 0)
r_death_outside_chances = 0.0
r_dir_equation_choice = PackedStringArray()
r_curve_choice = []
r_speed_multi_curve_choice = []
r_speed_multi_iter_variation = Vector3(0, 0, 0)
r_speed_multi_scale_variation = Vector3(0, 0, 0)
r_trigger_choice = PackedStringArray()
r_wait_for_shot_chances = 0.0
r_homing_target_choice = []
r_special_target_choice = PackedStringArray()
r_group_target_choice = PackedStringArray()
r_pos_target_choice = PackedVector2Array()
r_steer_choice = PackedFloat32Array()
r_steer_variation = Vector3(0, 0, 0)
r_homing_delay_choice = PackedFloat32Array()
r_homing_delay_variation = Vector3(0, 0, 0)
r_homing_dur_choice = PackedFloat32Array()
r_homing_dur_variation = Vector3(0, 0, 0)
r_scale_multi_curve_choice = []
r_scale_multi_iter_variation = Vector3(0, 0, 0)
r_scale_multi_scale_variation = Vector3(0, 0, 0)

[sub_resource type="Curve2D" id="Curve2D_ov2ev"]

[sub_resource type="Resource" id="Resource_u150e"]
script = ExtResource("12_4wkpc")
randomisation_chances = 1.0
bullet_choice = PackedStringArray()
nbr_choice = PackedInt32Array()
nbr_variation = Vector3(0, 0, 0)
nbr_reroll = false
iterations_choice = PackedInt32Array()
iterations_variation = Vector3(0, 0, 0)
forced_angle_choice = PackedFloat32Array()
forced_angle_variation = Vector3(0, 0, 0)
forced_angle_reroll = false
forced_target_choice = []
symmetry_chances = 0.0
center_choice = PackedInt32Array()
stasis_chances = 0.0
cooldown_spawn_choice = PackedFloat32Array()
cooldown_spawn_variation = Vector3(0, 0, 0)
cooldown_spawn_reroll = false
cooldown_shoot_choice = PackedFloat32Array()
cooldown_shoot_variation = Vector3(0, 0, 0)
cooldown_shoot_reroll = false
cooldown_next_spawn_choice = PackedFloat32Array()
cooldown_next_spawn_variation = Vector3(0, 0, 0)
cooldown_next_spawn_reroll = false
cooldown_next_shoot_choice = PackedFloat32Array()
cooldown_next_shoot_variation = Vector3(0, 0, 0)
cooldown_next_shoot_reroll = false
offset_x_variation = Vector3(0, 0, 0)
offset_y_variation = Vector3(0, 0, 0)
offset_x_reroll = false
offset_y_reroll = false
radius_choice = PackedFloat32Array()
radius_variation = Vector3(0, 0, 0)
radius_reroll = false
angle_total_choice = PackedFloat32Array()
angle_total_variation = Vector3(0, 0, 0)
angle_total_reroll = false
angle_decal_choice = PackedFloat32Array()
angle_decal_variation = Vector3(0, 0, 0)
angle_decal_reroll = false
reversed_chances = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1qbvp"]
resource_name = "PatternCircle"
script = ExtResource("10_4bm4s")
radius = 0.0
angle_total = 6.28319
angle_decal = 0.0
center = 0
perspective = 1.0
symmetric = false
bullet = "carrot"
nbr = 4
iterations = 8
cooldown_spawn = 1.0
cooldown_shoot = 0.16
cooldown_next_spawn = 0.0
cooldown_next_shoot = 0.0
cooldown_layers = PackedVector2Array()
cooldown_stasis = false
on_interruption = 0
pattern_angle = 0.0
pattern_angle_target = NodePath("")
pattern_angle_mouse = false
wait_behavior = 0
wait_tween_momentum = 0
wait_tween_length = 0.0
wait_tween_time = 0.0
forced_angle = 0.0
forced_target = NodePath("")
forced_lookat_mouse = false
forced_pattern_lookat = true
impulse = 0
bullet_list = Array[String]([])
skip_step = 0
skip_list = Array[PackedInt32Array]([])
skip_in_list = true
random = SubResource("Resource_u150e")

[node name="CarrotBoss" type="Node2D"]

[node name="Character" type="CharacterBody2D" parent="." node_paths=PackedStringArray("animation_player", "sprite", "state_machine")]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_nmnn0")
animation_player = NodePath("Sprite2D/AnimationPlayer")
sprite = NodePath("Sprite2D")
state_machine = NodePath("StateMachine")

[node name="Sprite2D" type="Sprite2D" parent="Character"]
texture_filter = 1
material = SubResource("ShaderMaterial_i5yl4")
texture = ExtResource("1_8u6sg")
hframes = 5
vframes = 5
frame = 7
metadata/_aseprite_wizard_config_ = {
"i_mode": 0,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://aisles/bosses/carrot/art",
"o_name": "",
"only_visible": false,
"player": "Character/Sprite2D/AnimationPlayer",
"slice": "",
"source": "C:/Users/edibl/BentoWorks/CleanupOnAisleTwenty/aseprite assets/carrotboss/carrot_boss.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "f5d2e076057c1e4cbe962163b931a3bc"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_6p5mx")
}

[node name="BossHealthComponent" parent="Character" instance=ExtResource("2_ti5tf")]
max_health = 30000.0
boss_cutscene_animation_string = "carrot"

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Character"]
polygon = PackedVector2Array(-3, 80, 14, 49, 17, -12, 0, -22, -18, -18, -22, -7, -19, 39)

[node name="EnemyHurtbox" parent="Character" node_paths=PackedStringArray("health_component") instance=ExtResource("3_bidri")]
health_component = NodePath("../BossHealthComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Character/EnemyHurtbox"]
visible = false
polygon = PackedVector2Array(-3, 92, 11, 78, 21, 48, 25, -9, 20, -27, -2, -32, -24, -26, -28, -9, -26, 45, -16, 82)

[node name="EnemyHitbox" parent="Character" instance=ExtResource("4_kh2t8")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Character/EnemyHitbox"]
polygon = PackedVector2Array(-3, 82, 15, 50, 18, -12, 0, -24, -19, -20, -24, -7, -20, 40)

[node name="BulletUpHell" type="Node2D" parent="Character"]

[node name="BulletPattern" type="Path2D" parent="Character/BulletUpHell"]
curve = SubResource("Curve2D_d4shc")
script = ExtResource("11_ksj8h")
id = "carrot"
props = SubResource("PackedDataContainer_7x8yc")

[node name="SpawnPattern" type="Path2D" parent="Character/BulletUpHell"]
curve = SubResource("Curve2D_ov2ev")
script = ExtResource("9_nhw65")
id = "carrot"
pattern = SubResource("NavigationPolygon_1qbvp")

[node name="SpawnPoint" type="Node2D" parent="Character/BulletUpHell"]
rotation = 0.785398
script = ExtResource("8_flvuu")
active = false
auto_pattern_id = "carrot"
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="StateMachine" type="Node2D" parent="Character" node_paths=PackedStringArray("animation", "character", "arrow")]
script = ExtResource("7_4udj2")
animation = NodePath("../Sprite2D/AnimationPlayer")
speed = 155
character = NodePath("..")
arrow = NodePath("../Arrow")

[node name="StunTimer" type="Timer" parent="Character/StateMachine"]
one_shot = true

[node name="RunningTimer" type="Timer" parent="Character/StateMachine"]
wait_time = 8.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="Character/StateMachine"]
wait_time = 2.0

[node name="DashTimer" type="Timer" parent="Character/StateMachine"]
wait_time = 0.25
one_shot = true

[node name="Timer" type="Timer" parent="Character/StateMachine"]
wait_time = 2.5

[node name="Arrow" type="Sprite2D" parent="Character"]
visible = false
texture_filter = 1
texture = ExtResource("15_vc48u")
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://aisles/bosses/carrot/art",
"o_name": "carrot_warning_arrow",
"only_visible": false,
"player": "",
"slice": "",
"source": "C:/Users/edibl/BentoWorks/CleanupOnAisleTwenty/aseprite assets/carrotboss/warningarrow.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "594b51a3e14c1a3c61fb5d2e0820e14f"

[connection signal="area_entered" from="Character/EnemyHitbox" to="Character/EnemyHitbox" method="_on_area_entered"]
[connection signal="area_entered" from="Character/EnemyHitbox" to="Character/StateMachine" method="stun"]
[connection signal="timeout" from="Character/StateMachine/StunTimer" to="Character/StateMachine" method="unstun"]
[connection signal="timeout" from="Character/StateMachine/RunningTimer" to="Character/StateMachine" method="running_timer_end"]
[connection signal="timeout" from="Character/StateMachine/ShootTimer" to="Character/StateMachine" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Character/StateMachine/DashTimer" to="Character/StateMachine" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Character/StateMachine/Timer" to="Character/StateMachine" method="_on_timer_timeout"]
